Step 18 - Internationalization for RESTful Services

--- a/restful-web-services/pom.xml
+++ b/restful-web-services/pom.xml
@@ -25,6 +25,8 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+
+		<!-- HATEOAS - Hypermedia as the Engine of Application State-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-hateoas</artifactId>
