Step 22 - Monitor APIs with Spring Boot Actuator

--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 logging.level.org.springframework = info
+# Expose everything over HTTP (More info: https://docs.spring.io/spring-boot/docs/current/reference/html/actuator.html)
+management.endpoints.web.exposure.include = *
