--- a/restful-web-services/pom.xml
+++ b/restful-web-services/pom.xml
@@ -40,6 +40,10 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.5.13</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 		<!-- Add support for XML -->
 		<!--
 		<dependency>
