--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -2,3 +2,9 @@ spring.application.name=currency-exchange
 server.port=8000
 
 spring.config.import=optional:configserver:http://localhost:8888
+# Configure JPA
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:testdb
+# This config makes datasource initialization run after table is created
+spring.jpa.defer-datasource-initialization=true
