--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 # This config makes datasource initialization run after table is created
 spring.jpa.defer-datasource-initialization=true
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
