--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.defer-datasource-initialization=true
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+# Configure retry properties for sample-api
+resilience4j.retry.instances.sample-api.max-attempts=5
+resilience4j.retry.instances.sample-api.wait-duration=1s
+resilience4j.retry.instances.sample-api.enable-exponential-backoff=true
