--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -15,3 +15,6 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 resilience4j.retry.instances.sample-api.max-attempts=5
 resilience4j.retry.instances.sample-api.wait-duration=1s
 resilience4j.retry.instances.sample-api.enable-exponential-backoff=true
+
+resilience4j.ratelimiter.instances.default.limit-for-period=2
+resilience4j.ratelimiter.instances.default.limit-refresh-period=10s
