--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -18,3 +18,5 @@ resilience4j.retry.instances.sample-api.enable-exponential-backoff=true
 
 resilience4j.ratelimiter.instances.default.limit-for-period=2
 resilience4j.ratelimiter.instances.default.limit-refresh-period=10s
+
+resilience4j.bulkhead.instances.default.max-concurrent-calls=10
